kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: default
  labels:
    app: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
